*timeline-1.8.1 (20 Nov 2015)

  20 Nov 2015; Poncho <poncho@spahan.ch> +timeline-1.8.1.ebuild,
  -timeline-1.8.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.8.0 (01 Nov 2015)

  01 Nov 2015; Poncho <poncho@spahan.ch> +timeline-1.8.0.ebuild,
  -timeline-1.7.1.ebuild:
  x11-misc/timeline: version bump

*timeline-1.7.1 (08 Sep 2015)

  08 Sep 2015; Poncho <poncho@spahan.ch> +timeline-1.7.1.ebuild,
  -timeline-1.7.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.7.0 (16 Aug 2015)

  16 Aug 2015; Poncho <poncho@spahan.ch> +timeline-1.7.0.ebuild,
  -timeline-1.6.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.6.0 (03 May 2015)

  03 May 2015; Poncho <poncho@spahan.ch> +files/timeline-1.6.0-path.patch,
  +timeline-1.6.0.ebuild, -files/timeline-0.20.0-paths.patch,
  -timeline-1.5.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.5.0 (30 Jan 2015)

  30 Jan 2015; Poncho <poncho@spahan.ch> +timeline-1.5.0.ebuild,
  -timeline-1.4.1.ebuild:
  x11-misc/timeline: version bump

*timeline-1.4.1 (28 Dec 2014)

  28 Dec 2014; Poncho <poncho@spahan.ch> +timeline-1.4.1.ebuild,
  -timeline-1.4.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.4.0 (08 Nov 2014)

  08 Nov 2014; Poncho <poncho@spahan.ch> +timeline-1.4.0.ebuild,
  -files/Xml-escape-text-in-svg-files.patch, -files/icons/16.png,
  -files/icons/32.png, -files/icons/48.png, -files/icons/backward.png,
  -files/icons/calendar.png, -files/icons/close.png, -files/icons/feedback.png,
  -files/icons/forward.png, -files/icons/home.png, -files/icons/stickypin.png,
  -files/icons/unstickypin.png, -timeline-1.2.4.ebuild,
  -timeline-1.3.0-r1.ebuild, -timeline-1.3.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.3.0-r1 (10 Jul 2014)

  10 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0-r1.ebuild:
  x11-misc/timeline: remove useflags

*timeline-1.3.0 (02 Jul 2014)

  02 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0.ebuild,
  -timeline-1.0.1-r1.ebuild: